Initial rabbit implementation
