# src/main/gen/team/polytech/online/diffusion/api/GeneratorApi.java
@@ -32,7 +32,7 @@ import java.util.Map;
 import java.util.Optional;
 import jakarta.annotation.Generated;
 
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-10-28T21:58:38.197996353+03:00[Europe/Moscow]")
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-11-26T02:48:27.820427+03:00[Europe/Moscow]")
 @Validated
 @Tag(name = "Generator", description = "Методы, связанные с генерацией изображений")
 public interface GeneratorApi {
@@ -40,6 +40,57 @@ public interface GeneratorApi {
     default Optional<NativeWebRequest> getRequest() {
         return Optional.empty();
     }
+
+    /**
+     * GET /api/v1/generation_status : Получаем сделанное изображение в цикле
+     * 
+     *
+     * @param generationToken Токен, по которому можно узнать об статусе генерируемого изображения (required)
+     * @return нейронная сеть успешно сгенерировала изображение и в присланном Image будет ссылка на него (status code 201)
+     *         or генерация изображения продолжается и еще не была завершена, но и не сломалась (status code 202)
+     *         or Попытка обратиться к защищенному JWT токеном эндпоинту без авторизации (status code 401)
+     *         or такого generation_token нет на сервере в принципе (status code 404)
+     *         or во время генерации изображения случилась ошибка и оно было потеряно безвозвратно :( (status code 500)
+     */
+    @Operation(
+        operationId = "generationStatus",
+        summary = "Получаем сделанное изображение в цикле",
+        description = "",
+        tags = { "Generator" },
+        responses = {
+            @ApiResponse(responseCode = "201", description = "нейронная сеть успешно сгенерировала изображение и в присланном Image будет ссылка на него", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Image.class))
+            }),
+            @ApiResponse(responseCode = "202", description = "генерация изображения продолжается и еще не была завершена, но и не сломалась"),
+            @ApiResponse(responseCode = "401", description = "Попытка обратиться к защищенному JWT токеном эндпоинту без авторизации"),
+            @ApiResponse(responseCode = "404", description = "такого generation_token нет на сервере в принципе"),
+            @ApiResponse(responseCode = "500", description = "во время генерации изображения случилась ошибка и оно было потеряно безвозвратно :(")
+        },
+        security = {
+            @SecurityRequirement(name = "JWTAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = "/api/v1/generation_status",
+        produces = { "application/json" }
+    )
+    default ResponseEntity<Image> generationStatus(
+        @NotNull @Parameter(name = "generationToken", description = "Токен, по которому можно узнать об статусе генерируемого изображения", required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "generationToken", required = true) String generationToken
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"seed\" : \"seed\", \"authorName\" : \"authorName\", \"authorAvatarUrl\" : \"authorAvatarUrl\", \"photoId\" : 0.8008281904610115, \"photoUrl\" : \"https://foo.ru/foo.jpg\", \"anti-prompt\" : \"anti-prompt\", \"model\" : \"model\", \"prompt\" : \"prompt\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
 
     /**
      * GET /api/v1/generator : Получаем список моделей для генератора
@@ -124,57 +175,6 @@ public interface GeneratorApi {
         @NotNull @Parameter(name = "modelName", description = "Название модели, которая будет использоваться для генерации", required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "modelName", required = true) String modelName,
         @Parameter(name = "seed", description = "Seed для генерации нейросети. Оставить пустым для случайного", in = ParameterIn.QUERY) @Valid @RequestParam(value = "seed", required = false) Optional<Long> seed
     ) {
-        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
-
-    }
-
-
-    /**
-     * TRACE /api/v1/generator : Получаем сделанное изображение в цикле
-     * 
-     *
-     * @param generationToken Токен, по которому можно узнать об статусе генерируемого изображения (required)
-     * @return нейронная сеть успешно сгенерировала изображение и в присланном Image будет ссылка на него (status code 201)
-     *         or генерация изображения продолжается и еще не была завершена, но и не сломалась (status code 202)
-     *         or Попытка обратиться к защищенному JWT токеном эндпоинту без авторизации (status code 401)
-     *         or такого generation_token нет на сервере в принципе (status code 404)
-     *         or во время генерации изображения случилась ошибка и оно было потеряно безвозвратно :( (status code 500)
-     */
-    @Operation(
-        operationId = "traceGenerator",
-        summary = "Получаем сделанное изображение в цикле",
-        description = "",
-        tags = { "Generator" },
-        responses = {
-            @ApiResponse(responseCode = "201", description = "нейронная сеть успешно сгенерировала изображение и в присланном Image будет ссылка на него", content = {
-                @Content(mediaType = "application/json", schema = @Schema(implementation = Image.class))
-            }),
-            @ApiResponse(responseCode = "202", description = "генерация изображения продолжается и еще не была завершена, но и не сломалась"),
-            @ApiResponse(responseCode = "401", description = "Попытка обратиться к защищенному JWT токеном эндпоинту без авторизации"),
-            @ApiResponse(responseCode = "404", description = "такого generation_token нет на сервере в принципе"),
-            @ApiResponse(responseCode = "500", description = "во время генерации изображения случилась ошибка и оно было потеряно безвозвратно :(")
-        },
-        security = {
-            @SecurityRequirement(name = "JWTAuth")
-        }
-    )
-    @RequestMapping(
-        method = RequestMethod.TRACE,
-        value = "/api/v1/generator",
-        produces = { "application/json" }
-    )
-    default ResponseEntity<Image> traceGenerator(
-        @NotNull @Parameter(name = "generationToken", description = "Токен, по которому можно узнать об статусе генерируемого изображения", required = true, in = ParameterIn.QUERY) @Valid @RequestParam(value = "generationToken", required = true) String generationToken
-    ) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"seed\" : \"seed\", \"authorName\" : \"authorName\", \"authorAvatarUrl\" : \"authorAvatarUrl\", \"photoId\" : 0.8008281904610115, \"photoUrl\" : \"https://foo.ru/foo.jpg\", \"anti-prompt\" : \"anti-prompt\", \"model\" : \"model\", \"prompt\" : \"prompt\" }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
