# src/main/java/team/polytech/online/diffusion/api/GeneratorApiController.java
@@ -1,20 +1,20 @@
 package team.polytech.online.diffusion.api;
 
 
+import jakarta.annotation.Generated;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.context.request.NativeWebRequest;
+import team.polytech.online.diffusion.entity.GenerationStatus;
+import team.polytech.online.diffusion.model.Image;
+import team.polytech.online.diffusion.service.generator.GeneratorService;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.Random;
-
-import jakarta.annotation.Generated;
-import team.polytech.online.diffusion.service.GeneratorService;
+import java.util.concurrent.ThreadLocalRandom;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-10-26T02:19:33.552470+03:00[Europe/Moscow]")
 @Controller
@@ -23,7 +23,7 @@ public class GeneratorApiController implements GeneratorApi {
 
     private final NativeWebRequest request;
     private final GeneratorService generatorService;
-    private final Random random = new Random(System.currentTimeMillis());
+    private final ThreadLocalRandom random = ThreadLocalRandom.current();
 
     @Autowired
     public GeneratorApiController(NativeWebRequest request,
@@ -39,8 +39,34 @@ public class GeneratorApiController implements GeneratorApi {
 
     @Override
     public ResponseEntity<String> postGenerator(String prompt, String antiPrompt, String modelName, Optional<Long> seed) {
-        long seedl = seed.orElse(random.nextLong());
-        return new ResponseEntity<>(generatorService.generate(prompt, antiPrompt, modelName, seedl), HttpStatus.OK);
+        long generationSeed = seed.orElse(random.nextLong());
+        try {
+            return new ResponseEntity<>(generatorService.generate(prompt, antiPrompt, modelName, generationSeed).getUUID(), HttpStatus.OK);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    @Override
+    public ResponseEntity<Image> generationStatus(String generationToken) {
+        GenerationStatus status;
+        try {
+            status = generatorService.getGenerationStatus(generationToken).orElse(null);
+        } catch (Exception e) {
+            return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        }
+        if (status == null) {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        }
+        return responseFromStatus(status);
+    }
+
+    private ResponseEntity<Image> responseFromStatus(GenerationStatus status) {
+        return switch (status.getStage()) {
+            case NOT_STARTED, IN_PROGRESS -> new ResponseEntity<>(HttpStatus.ACCEPTED);
+            case SUCCESSFUL -> new ResponseEntity<>(HttpStatus.CREATED);
+            case FAILED -> new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+        };
     }
 
     @Override
